# Commitgenius

./: .env.example  Cargo.toml  LICENSE  README.md  main.rs  test-feature.txt  test.txt
.github/workflows/: publish-deb.yml  release.yml  update-apt-repo.yml
Formula/: commitgenius.rb
apt-repo/: KEY.gpg
debian/: control  postinst  rules
docs/: styles.css
landing/: index.html
src/: lib.rs  main.rs
src/ai/: mod.rs
src/git/: mod.rs
src/github/: mod.rs
