[package]
name = "commitgenius"
version = "0.3.0"
edition = "2021"
authors = ["Hasanul Banna <bannawandoor27@gmail.com>"]
description = "An AI-powered CLI tool that generates conventional commit messages using local LLMs via Ollama"
repository = "https://github.com/bannawandoor27/Commitgenius"
license = "MIT"
keywords = ["git", "commit", "ai", "ollama", "conventional-commits"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
git2 = "0.18"
